# glfw-cmake-configure

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh.in  clean.sh.in  run.sh.in
src/: main.cpp
src/headers/: common.h  gl_utils.h  window.h
src/utils/: gl_utils.cpp  utils.cpp  window.cpp
